manifests/platform/services/llm-gateway/llama-cpp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-cpp-api
  labels:
    app.kubernetes.io/name: llm-gateway
spec:
  selector:
    app.kubernetes.io/name: llm-gateway
  ports:
  - port: 8000
    targetPort: llama-proxy
    protocol: TCP
